# stocksdemo

./: .gitignore  README.md  docker-compose.yml  dockerfile
app/: Makefile  README.md  pyproject.toml
app/stocksapi/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
app/stocksapi/migrations/: 0001_initial.py  0002_profitandloss_stockdailybar_delete_stockdaybar_and_more.py  0003_profitandloss_ticker.py  0004_alter_stockdailybar_timestamp.py
app/stocksapi/polygon/: __init__.py
app/take_home/: settings.py  urls.py  views.py
app/tests/: test_functions.py
