[tool.poetry]
name = "take-home"
version = "0.1.0"
description = "Basic Django web application for take home assignment."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
setuptools = "^69.5.1"
polygon-api-client = "^1.13.7"
requests = "^2.31.0"
pylint = "^3.2.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
